# huggingface-local-embedding

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  huggingface_embedding_server.ipynb  huggingface_embedding_server.py  pyproject.toml  requirements.txt
